# Deep_Voice_Phishing_Detection

./: .gitignore  README.md  main.py  project_overview.md
app/ai/: Preprocess_denoise.py  dataset.py  eval_recording.py  finetune.py  korean_dataset.py  make_tts.py  model.py  precache_npy.py  train.py  training_log.txt  진짜_통화_1.m4a  진짜_통화_2.m4a  진짜_통화_3.m4a
app/ai/execute_results/: asvspoof_results.md
client/: pubspec.yaml
client/lib/: main.dart
client/lib/models/: analysis_result.dart  call_record.dart
client/lib/screens/: history_screen.dart  home_screen.dart  realtime_screen.dart
client/lib/services/: audio_service.dart  websocket_service.dart
client/test/: widget_test.dart
execute_results/: analysis_report.md  finetune_results.md  finetune_test_results.md  spectrogram_analysis.md
server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  test_websocket.py
server/app/: main.py
server/app/api/: websocket.py
server/app/core/: config.py  schemas.py
server/app/models/: deepfake.py  nlu.py  stt.py
server/app/services/: audio_processor.py  explainer.py  pipeline.py
실행 결과/: ASVspoof_results.md  finetune_results.md
